examples/simple/undefined/UB-CB1-bad.output
Error: UB-CB1
Description: types of function call arguments aren't compatible with declared types after promotions.
Type: Undefined behavior.
See also: C11 sec. 6.5.2.2:6, J.2:1 item 39
  at f(UB-CB1-bad.c:9)
  at main(UB-CB1-bad.c:9)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
