examples/simple/undefined/UB-CB1-bad.c
// Copyright (c) 2015 Runtime Verification, Inc. All Rights Reserved.

int f(x) 
int x;
{
	return x;
}
int main(void){
	return f(5.5);
}

